WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69278
CSS 2.1 failure: block-non-replaced-width-008.htm
https://bugs.webkit.org/show_bug.cgi?id=69278
Summary
CSS 2.1 failure: block-non-replaced-width-008.htm
Robert Hogan
Reported
2011-10-03 12:09:24 PDT
The checked-in results for this test show a failure.
Attachments
Patch
(19.76 KB, patch)
2011-10-03 13:37 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(20.05 KB, patch)
2011-10-04 12:20 PDT
,
Robert Hogan
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-10-03 13:37:08 PDT
Created
attachment 109519
[details]
Patch
Robert Hogan
Comment 2
2011-10-04 12:20:21 PDT
Created
attachment 109664
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-10-24 13:20:12 PDT
Comment on
attachment 109664
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109664&action=review
> Source/WebCore/ChangeLog:11 > + Include the margins in the calculation of logical width even when the containing block's > + width is zero. This is required by block-non-replaced-width-008.htm in the CSS test suite.
It would be better to refer to the section of the CSS 2.1 spec that requires this, not the test that is fixed by the change.
Robert Hogan
Comment 4
2011-10-29 12:17:01 PDT
Committed
r98812
: <
http://trac.webkit.org/changeset/98812
>
Ryosuke Niwa
Comment 5
2011-10-29 14:06:32 PDT
css2.1/20110323/block-non-replaced-width-008.htm and fast/replaced/width100percent-searchfield.html appear to have started failing after this patch:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r98812%20(34300)/results.html
Could you rebaseline or skip them?
Ryosuke Niwa
Comment 6
2011-10-29 15:04:27 PDT
Mac rebaseline done in
http://trac.webkit.org/changeset/98818
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug