CSS 2.1 failure: block-non-replaced-width-008.htm https://bugs.webkit.org/show_bug.cgi?id=69278

Reviewed by Simon Fraser.

Source/WebCore:

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalWidthUsing):
  Include the margins in the calculation of logical width even when the containing block's
  width is zero. This is required by section '10.3.3 Block-level, non-replaced elements in
  normal flow' in the CSS 2.1 spec. Tested by block-non-replaced-width-008.htm in the CSS
  test suite.

LayoutTests:

* platform/chromium-win/fast/replaced/width100percent-searchfield-expected.txt:
  The pixel result is preserved, but the width of the containing block in the render
  tree now accurately reflects the rendered size of the cells.
* platform/chromium/test_expectations.txt:
* platform/mac/css2.1/20110323/block-non-replaced-width-008-expected.png:
* platform/mac/css2.1/20110323/block-non-replaced-width-008-expected.txt:

Canonical link: https://commits.webkit.org/87426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98812 268f45cc-cd09-0410-ab3c-d52691b4dbfc